--- a/src/locales/zh-CN.yml
+++ b/src/locales/zh-CN.yml
@@ -14,6 +14,7 @@ commands:
     messages:
         marriages: '{quote}你今日的群友老婆是：{name} {avatar}'
         members-too-few: 潜在的老婆太少啦，快去拐骗（？）点回来吧！或者骗出来聊天！
+        times-too-many: '{quote}渣男，你今天没老婆了！'
   force-marry:
     description: 强娶群友
     messages:
